bin_PROGRAMS = gnunet-fs
gnunet_fs_SOURCES = \
	directory.c \
	dirent.c \
	file.c \
	getattr.c \
	main.c \
	mkdir.c \
	mknod.c \
	open.c \
	read.c \
	readdir.c \
	release.c \
	rename.c \
	rmdir.c \
	special_file.c \
	truncate.c \
	unlink.c \
	utimens.c \
	write.c \
	gnfs.h \
	gettext.h

gnunet_fs_CPPFLAGS = -DFUSE_USE_VERSION=26 -D_REENTRANT
